* 2009-08-16 add emergency escape route: if sclang is caught in an infinite loop, send it a USR1 signal to break out of it - ds
* 2009-09-12 String:findRegexp and other regular expressions now available on linux as well as mac - mb,ds

Bugfixes:
---------

* 2009-07-21 Loudness ugen now supports LocalBuf - nc
* 2009-07-23 Fix very nasty bug in Pbindf: if a key is an array, new values were written into the incoming event, instead of the outgoing event - jh
* 2009-07-28 catch unintialised value in sc_GetUserHomeDirectory(), fixing potential memory corruption if HOME not set - ds
* 2009-08-01 SpecCentroid, fix its reaction to silence (output zero instead of NaN) - ds
* 2009-08-04 fix the CPU-usage issue when calling plain "./sclang" from the terminal on OSX (seems it was caused by a bug in how OSX handles poll() calls) - ds
* 2009-08-15 LinPan2: fix initialisation issue - panning was not correctly applied during the first calc block - ds
* 2009-09-13 fix PV_MagShift argument handling, so that the defaults mean no-change, matching the behaviour of PV_BinShift - ds

Other additions/improvements:
-----------------------------

* 2009-06-27 build 32bit sclang on x86_64 - tb
* 2009-07-xx efficiency improvements on some UGens - tb
* 2009-07-xx improve Quarks use of svn for smoother user experience - ds
* 2009-07-22 catch the case when a user tries to compile into a synthdef, a unary/binary operator that the server can't apply - jh
* 2009-08-29 String:toUpper and String:toLower - ds
* 2009-09-06 Boolean:while now throws an informative error, since Boolean:while has no particular use but is often used in error by beginners in code where Function:while is intended - ds

SuperCollider v3.3.1, released 2009-06-19
=========================================

Headlines:
----------

* 2009-05-11 SCWindow additions for visible, visible_, unminimize - cq
* 2009-05-17 server guis (on osx) now indicate which one is currently default - adc